--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "engines": {
     "node": ">=8"
   },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:nilsnh/convert-itt.git"
+  },
   "bin": {
     "convert-itt": "./index.js"
   },
